--- a/department-service.properties
+++ b/department-service.properties
@@ -7,3 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+speing.boot.message=Hello, Department Service
